--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Homework 14</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-
+    <form class="form">
+      <input type="text" name="listItem" placeholder="Enter text" />
+      <button type="submit" class="save-button">SAVE</button>
+    </form>
+    <ul class="list"></ul>
 </body>
 </html>
